[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scipion-em-bindcraft"
dynamic = ["version", "dependencies"]

authors = [
    {name = "Roberto Marabini", email = "roberto@cnb.csic.es"},
    {name = "Marta Martinez", email = "mmmtnez@cnb.csic.es"},
]
description = "Plugin to design proteins with BindCraft within the Scipion framework"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["scipion", "electron-microscopy", "cryo-em", "structural-biology", "image-processing", "scipion-3.0", "bindcraft"]
license = {text = "GNU General Public License v3 (GPLv3)"}

[project.urls]
Homepage = "https://github.com/scipion-em/scipion-em-bindcraft"
Repository = "https://github.com/scipion-em/scipion-em-bindcraft"
Issues = "https://github.com/scipion-em/scipion-em-bindcraft/issues"

[tool.setuptools.package-data]
"bindcraft" = ["protocols.conf", "icon.png"]

[project.entry-points."pyworkflow.plugin"]
bindcraft = "bindcraft"

[tool.setuptools.dynamic]
version = {attr = "bindcraft.__version__"}
dependencies = {file = ["requirements.txt"]}

